--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.12",
+    "pydantic-settings>=2.8.1",
     "ruff>=0.11.5",
+    "sqlalchemy>=2.0.40",
 ]
