--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "alembic>=1.15.2",
-    "asyncpg>=0.30.0",
+    "asyncpg==0.28.0",
+    "black>=25.1.0",
     "fastapi>=0.115.12",
     "nltk>=3.9.1",
     "psycopg2-binary>=2.9.10",
